Improve javadocs